# BankProjections

./: .gitignore  CLAUDE.md  CODE_QUALITY_SUMMARY.md  README.md  efficiency_assessment.py  pyproject.toml
examples/: synthetic_data.py
src/: __init__.py  compare_valuations.py
src/bank_projections/: __init__.py  app_config.py  app_config.yaml  config.py  dictionary.csv  main.py  output_config.py
src/bank_projections/amortization/: __init__.py
src/bank_projections/data_preparation/: __init__.py
src/bank_projections/financials/: accounting_method.py  balance_sheet.py  balance_sheet_category.py  balance_sheet_item.py  balance_sheet_metric_registry.py  balance_sheet_metrics.py  hqla_class.py  market_data.py  metrics.py  stage.py
src/bank_projections/metrics/: __init__.py  metrics.py  profitability.py
src/bank_projections/output/: __init__.py
src/bank_projections/projections/: __init__.py  accounting_method.py  accrual.py  accrual_method.py  agio_redemption.py  agioredemption.py  base_registry.py  book.py  coupon_payment.py  coupon_type.py  daycount_fraction.py  frequency.py  hqla_class.py  market_data.py  projection.py  projectionrule.py  redemption.py  redemption_type.py  rule.py  runoff.py  settings.py  stage.py  time.py  valuation.py  valuation_method.py
src/bank_projections/scenarios/: audit.py  cost_income.py  curve.py  excel_sheet_format.py  mutation.py  production.py  scenario.py  scenario_input_type.py  tax.py  template.py  template_registry.py  templates.py  undrawn.py
src/bank_projections/utils/: combine.py  coupons.py  date.py  daycounting.py  logging.py  parsing.py  scaling.py  time.py
src/examples/: __init__.py  efficiency_assessment.py  example_bs.csv  knab_bs.csv  main.py  output_config.yaml  scenario_config.yaml  synthetic_config.csv  synthetic_data.py  test_bs.csv
src/examples/scenarios/: example_excel.xlsx  example_scenario.xlsx
src/examples/ui/: __init__.py  colors.py  example_model_run.py  single_asset_run.py  styles.py
tests/: conftest.py  test_app_config.py  test_audit_rule.py  test_balance_sheet_coverage.py  test_balance_sheet_creation.py  test_balance_sheet_item.py  test_balance_sheet_methods.py  test_balance_sheet_metrics.py  test_combine.py  test_cost_income_rule.py  test_daycount_fraction.py  test_frequency.py  test_market_data.py  test_metrics.py  test_production_rule.py  test_projection.py  test_redemption.py  test_rule.py  test_runoff.py  test_scenario.py  test_scenarios_templates.py  test_synthetic_data.py  test_time.py  test_ui.py
